# FSDpractice200

./: .gitignore  README.md  cloned_tools.md  git_history_generator.py  push_to_github.py
agentkit/: LICENSE  README.md
ai-saas-app/: README.md  package.json
rust-react-starter/: .dockerignore  .gitignore  .prettierignore  Cargo.toml  README.md  claude.md  docker-compose.yaml  eslint.config.mjs  justfile  package.json
rust-react-starter/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
rust-react-starter/.github/actions/setup/: action.yml
rust-react-starter/.github/workflows/: ci.yml
rust-react-starter/apps/backend/: .env.example  Cargo.toml  Dockerfile
rust-react-starter/apps/backend/.sqlx/: query-05e9845145e191cde2cb309daff1d5fcfd58d918d68e46046ae61fcfe253ce84.json  query-09c09c77346fef91b6b9062ec13f04d64ef18d820ad844a8ebba734fad75b9c3.json  query-6cd2db83bcd89c602c1dcab00e9e7a3937dada04484af74ad3077526e5ddc89f.json  query-75ccebca1b2af96f5dd757c835c1e80df04822299dc50807f7663c245fcdc9b0.json  query-7a4a2db613f15a6fc82133dc69d6734d2f4a3ea86209bb7eaffd64a24ef13751.json
rust-react-starter/apps/backend/src/: errors.rs  lib.rs  main.rs
rust-react-starter/apps/backend/src/api/rest/: health.rs  mod.rs  todos.rs
rust-react-starter/apps/backend/src/api/ws/: handler.rs  mod.rs
rust-react-starter/apps/backend/src/db/: mod.rs  todos.rs
rust-react-starter/apps/backend/src/db/pg/: mod.rs
rust-react-starter/apps/backend/src/db/pg/migrations/: 20250101000000_init.sql
rust-react-starter/apps/backend/src/models/: api.rs  db.rs  domain.rs  mod.rs
rust-react-starter/apps/backend/tests/: api_integration_test.rs  todos_test.rs  websocket_integration_test.rs
rust-react-starter/apps/frontend/: .env.example  Dockerfile  next.config.ts  package.json
rust-react-starter/apps/frontend/src/app/: layout.tsx  page.tsx
rust-react-starter/apps/frontend/src/components/: ConnectionStatus.tsx  ErrorAlert.tsx  Header.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  theme-toggle.tsx
rust-react-starter/apps/frontend/src/components/ui/: form.tsx  select.tsx
rust-react-starter/apps/frontend/src/lib/: store.ts
rust-react-starter/apps/frontend/src/lib/hooks/: index.ts  useApiClient.ts  useTodos.ts
rust-react-starter/apps/frontend/src/lib/providers/: index.tsx
rust-react-starter/apps/frontend/src/lib/types/: index.ts  todo.ts
rust-react-starter/apps/frontend/src/styles/: globals.css
(+155 files in other folders)
