[package]
name = "backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
reqwest.workspace = true
test-utils.workspace = true
tokio-test.workspace = true
tokio-tungstenite.workspace = true
